--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,9 @@ body {
 }
 
 img {
+  width: 100%;
+  height: auto;
   display: block;
-}
-
-img {
   margin: 0;
 }
 
@@ -56,9 +55,25 @@ p {
 }
 
 .container {
-  width: 1200px;
-  margin: auto;
-  padding: 0 15px 0 15px;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 .header {
@@ -211,26 +226,63 @@ p {
 }
 
 .skill__cards {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  width: 100%;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .skill__cards {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
-.cards {
-  padding: 0;
-  display: flex;
+@media screen and (min-width: 768px) {
+  .cards {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .cards {
+    display: flex;
+    padding: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .cards__item {
+    width: 354px;
+    margin-bottom: 0px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .cards__item {
+    width: 270px;
+  }
 }
 .cards__container {
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+  width: 450px;
   margin-bottom: 30px;
   background-color: #f5f4fa;
-  height: 120px;
-  width: 270px;
-  margin-right: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .cards__container {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    height: 120px;
+    width: 270px;
+  }
 }
 .cards__item:last-child {
   padding-right: 0;
 }
 .cards__title {
-  width: 270px;
+  text-align: center;
   padding-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
@@ -239,8 +291,13 @@ p {
   text-transform: uppercase;
   color: var(--link-color);
 }
+@media screen and (min-width: 1200px) {
+  .cards__title {
+    text-align: start;
+    width: 270px;
+  }
+}
 .cards__text {
-  width: 270px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -249,14 +306,25 @@ p {
 }
 .cards__icon {
   display: block;
-  width: 270px;
   height: 120px;
   background-color: #f5f4fa;
-  padding: 25px 100px;
+}
+@media screen and (min-width: 1200px) {
+  .cards__icon {
+    width: 270px;
+    height: 120px;
+    padding: 25px 100px;
+  }
 }
 
 .work {
+  display: block;
   margin-bottom: 94px;
+}
+@media screen and (max-width: 1199px) {
+  .work {
+    display: none;
+  }
 }
 .work__typs {
   padding: 0;
@@ -265,7 +333,7 @@ p {
 .work__list {
   padding-right: 30px;
 }
-.work__ .work__list:last-child {
+.work__list:last-child {
   padding-right: 0;
 }
 .work__title {
@@ -301,9 +369,15 @@ p {
 }
 
 .teams {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #f5f4fa;
+}
+@media screen and (min-width: 1200px) {
+  .teams {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .teams-ul {
   display: flex;
@@ -313,16 +387,38 @@ p {
 
 .team {
   padding: 0;
-  display: flex;
+}
+@media screen and (min-width: 768px) {
+  .team {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    display: flex;
+    gap: 0;
+  }
 }
 .team .item {
-  width: 270px;
-  margin-right: 30px;
+  margin-bottom: 30px;
   text-align: center;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   background-color: var(--ptimari-bg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 768px) {
+  .team .item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team .item {
+    width: 270px;
+    margin-right: 30px;
+  }
 }
 .team .team .item:last-child {
   margin-right: 0;
@@ -343,6 +439,10 @@ p {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--link-color);
+}
+
+.item:last-child {
+  margin-right: 0;
 }
 
 .name-p {
@@ -389,30 +489,61 @@ p {
 
 .customers {
   display: block;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-bottom: 60px;
+  padding-top: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .customers {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .customers-title {
+  margin-bottom: 60px;
+  font-size: 28px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  margin-bottom: 50px;
-  font-size: 36px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
 }
+@media screen and (min-width: 1200px) {
+  .customers-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
+}
 .customers-item {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .customers-item {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: 0;
+  }
 }
 .customers-list {
-  margin-right: 30px;
+  width: calc((100% - 30px) / 2);
+}
+@media screen and (min-width: 768px) {
+  .customers-list {
+    width: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers-list {
+    margin-right: 30px;
+  }
 }
 .customers-link {
   display: flex;
-  width: 170px;
+  width: 100%;
   height: 92px;
   align-items: center;
   justify-content: center;
@@ -420,6 +551,16 @@ p {
   border-radius: 4px;
   outline: none;
   transition: 250ms var(--timing-function);
+}
+@media screen and (min-width: 768px) {
+  .customers-link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers-link {
+    width: 170px;
+  }
 }
 .customers-icon {
   fill: #afb1b8;
@@ -507,9 +648,13 @@ p {
 }
 
 .social {
-  margin-left: 70px;
-  width: 206px;
-  height: 80px;
+  max-width: 232px;
+}
+@media screen and (min-width: 1200px) {
+  .social {
+    margin-left: 70px;
+    height: 80px;
+  }
 }
 .social__title {
   font-family: "Roboto";
@@ -524,6 +669,13 @@ p {
 }
 .social__networks {
   display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 1200px) {
+  .social__networks {
+    display: flex;
+    flex-direction: row;
+  }
 }
 .social__item {
   display: flex;
@@ -553,8 +705,10 @@ p {
   fill: #ffffff;
 }
 
-.send-form {
-  margin-left: 93px;
+@media screen and (min-width: 1200px) {
+  .send-form {
+    margin-left: 93px;
+  }
 }
 .send-form__title {
   margin-bottom: 20px;
@@ -569,14 +723,21 @@ p {
 }
 .send-form__mail {
   padding-left: 16px;
+  max-width: 450px;
+  width: 100%;
   height: 50px;
-  width: 358px;
   color: #ffffff;
   outline: #757575;
   background: #2f303a;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+@media screen and (min-width: 1200px) {
+  .send-form__mail {
+    height: 50px;
+    width: 358px;
+  }
 }
 .send-form__ .send-form__mail::placeholder {
   font-family: "Roboto";
