--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,8 +1,12 @@
 
 
 img {
-                margin: 0;
-}
+width: 100%;
+height: auto;             
+display: block; 
+margin: 0;
+ }
+
 
 ul {
                 margin: 0;
