--- a/sass/layouts/_customers-cards.scss
+++ b/sass/layouts/_customers-cards.scss
@@ -1,28 +1,53 @@
 .customers {
                 display: block;
+                padding-bottom:60px;
+                padding-top: 60px;
+                @media screen and(min-width:1200px){
                 padding-top: 94px;
-                padding-bottom: 94px;
+                padding-bottom: 94px;               
+                }
+                
                 &-title {
+                margin-bottom: 60px;
+                font-size: 28px;
                 font-family: 'Roboto';
                 font-style: normal;
                 font-weight: 700;
-                margin-bottom: 50px;
-                font-size: 36px;
                 line-height: 1.16;
                 text-align: center;
                 letter-spacing: 0.03em;
                 color: #212121;
+                @media screen and(min-width:1200px){
+                 margin-bottom: 50px;
+                font-size: 36px;              
+                }
+
 }
                 &-item {
+                   display: flex;
+                   flex-wrap: wrap; 
+                   gap: 30px;            
+                @media screen and(min-width:1200px) {
                 display: flex;
-                justify-content: center;
+             flex-wrap: nowrap;
+                justify-content: center;  
+                gap:0;                              
+                }
+                
 }
                &-list {
-                margin-right: 30px;
+                   width: calc((100% - 30px)/2);
+               @media screen and(min-width:768px){
+                  width: calc((100% - 60px)/3);
+               }
+                @media screen and(min-width:1200px)
+                {margin-right: 30px;
+               }
+                
 }
                &-link {
-                display: flex;                                                                                                  
-                width: 170px;
+                display: flex;
+                width: 100%;                                                                                                  
                 height: 92px;
                 align-items: center;
                 justify-content: center;
@@ -30,6 +55,11 @@
                 border-radius: 4px;
                 outline: none;
                 transition: 250ms var(--timing-function);
+                
+                @media screen and(min-width:768px){
+                               width: 226px; }
+@media screen and(min-width:1200px) {
+                width: 170px;}
 }
                 &-icon {
                 fill: #afb1b8;
