--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -75,9 +75,15 @@ color: var(--ptimari-bg-color);
 
 
 .social {
-                margin-left: 70px;
-                width: 206px;
-                height: 80px;
+
+  max-width: 232px;
+  @media screen and(min-width:1200px) {
+    margin-left: 70px;
+    
+    height: 80px;
+  
+}
+                
                 &__title {
                 font-family: 'Roboto';
                 font-style: normal;
@@ -90,7 +96,17 @@ color: var(--ptimari-bg-color);
                 color: #ffffff;
                 }
                 &__networks {
-                display: flex;
+                  display:flex;
+                  flex-direction: column;
+                  
+
+                  @media screen and(min-width:1200px){
+                    display: flex;
+                   flex-direction: row;
+                  }
+                
+              
+
                                 }
                 &__item {
                  display: flex;
@@ -125,7 +141,10 @@ color: var(--ptimari-bg-color);
 
 }
 .send-form {
-                margin-left: 93px;
+  @media screen and(min-width:1200px){
+   margin-left: 93px;
+}
+               
                 &__title {
                 margin-bottom: 20px;
                 font-family: 'Roboto';
@@ -139,14 +158,19 @@ color: var(--ptimari-bg-color);
 }
                 &__mail {
                 padding-left: 16px;
+                max-width: 450px;
+                width: 100%;
                 height: 50px;
-                width: 358px;
                 color: #ffffff;
                 outline: #757575;
                 background: #2f303a;
                 border: 1px solid rgba(255, 255, 255, 0.3);
                 box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
                 border-radius: 4px;
+                @media screen and(min-width:1200px){
+                  height: 50px;
+                width: 358px;
+                }
                 .send-form__ &::placeholder {
                 font-family: 'Roboto';
                 font-style: normal;
