--- a/sass/layouts/_skill-cards.scss
+++ b/sass/layouts/_skill-cards.scss
@@ -1,54 +1,84 @@
 .skill__cards {
-                padding-top: 94px;
-                padding-bottom: 94px;
+width: 100%;
+padding-top: 60px;
+padding-bottom: 60px;  
+@media screen and(min-width:768px){
+
+}
+@media screen and (min-width: 1200px){
+padding-top: 94px;
+padding-bottom: 94px;}
 }
 
 .cards {
-                padding: 0;
-                display: flex;
-                
+@media  screen and(min-width:768px) {
+list-style: none;
+display: flex;
+flex-wrap: wrap;
+gap: 30px;
+}
+@media screen and (min-width: 1200px){
+display: flex; 
+padding: 0;              
+} 
+&__item{
+@media screen and(min-width:768px){
+width: 354px;
+margin-bottom: 0px;
+}
+@media screen and (min-width: 1200px){
+width:270px ;                
+}
+
+}
+        
 &__container {
-                margin-bottom: 30px;
-                background-color: #f5f4fa;
-                height: 120px;
-                width: 270px;
-                margin-right: 30px;
+display: flex;
+justify-content: center;
+max-width: 100%;                
+width: 450px;
+margin-bottom: 30px;
+background-color: #f5f4fa;
+
+@media screen and (min-width: 1200px){
+margin-right: 30px;
+margin-bottom: 30px;
+height: 120px;
+width: 270px;
+}
 }
 &__item:last-child {
-                padding-right: 0;
+padding-right: 0;
 }
 &__title {
-                width: 270px;
-                padding-bottom: 10px;
-                font-weight: 700;
-                font-size: 14px;
-                line-height: 1.14;
-                letter-spacing: 0.03em;
-                text-transform: uppercase;
-                color: var(--link-color);
+text-align: center;
+padding-bottom: 10px;
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+ color: var(--link-color);
+@media screen and (min-width: 1200px) {
+text-align: start;               
+width: 270px;}
 }
+
 &__text {
-                width: 270px;
-                font-weight: 400;
-                font-size: 14px;
-                line-height: 1.71;
-                letter-spacing: 0.03em;
-                color: #757575;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: #757575;
 }
 &__icon {
-                display: block;
-                width: 270px;
-                height: 120px;
-                background-color: #f5f4fa;
-                padding: 25px 100px;
+display: block;
+height: 120px;
+background-color: #f5f4fa;
+@media screen and (min-width: 1200px){
+width: 270px;
+height: 120px;
+padding: 25px 100px; 
+}                              
 }
 }
-
-
-
-
-
-
-
-
-
