--- a/sass/layouts/_teams.scss
+++ b/sass/layouts/_teams.scss
@@ -1,20 +1,37 @@
-.teams {
-                padding-top: 94px;
-                padding-bottom: 94px;
-                background-color: #f5f4fa;
-                &-ul {
-                display: flex;
-                justify-content: center;
-                gap: 10px;
+.teams {padding-top: 60px;
+        padding-bottom: 60px;
+        background-color: #f5f4fa;
+@media screen and (min-width:1200px) {
+padding-top: 94px;
+padding-bottom: 94px;                                
+ }
+&-ul {
+display: flex;
+justify-content: center;
+gap: 10px;
 }
 }
 
 .team {
                 padding: 0;
-                display: flex;
+
+                @media screen and (min-width:768px){
+                                display: flex;
+                                flex-wrap: wrap;
+                                gap: 30px;
+                }
+                @media screen and (min-width:1200px) {
+                display: flex; 
+                gap: 0;                           
+                                }
                 & .item {
-                width: 270px;
-                margin-right: 30px;
+                @media screen and (min-width:768px){
+                   width: 354px;}            
+                @media screen and (min-width:1200px)
+
+                {width: 270px;
+                margin-right: 30px;}
+                margin-bottom: 30px;
                 text-align: center;
                 border-bottom-left-radius: 4px;
                 border-bottom-right-radius: 4px;
@@ -43,7 +60,9 @@
                 color: var(--link-color);
 }
 }
-
+.item:last-child{
+                margin-right: 0;
+}
 
 .name-p {
                 padding-top: 30px;
